--- a/index.html
+++ b/index.html
@@ -68,10 +68,6 @@
                         </select>
                         <label class="form-label">Tipo:</label>
                     </li>
-                    <li class="form-list-item">
-                        <input type="text" class="form-input" name="" />
-                        <label class="form-label">Nome do condomínio:</label>
-                    </li>
                     <li class="form-list-item-2">
                         <select class="form-input">
                         	<option></option>
@@ -140,6 +136,15 @@
                         </select>
                         <label class="form-label">Construção:</label>
                     </li>
+                    <li class="form-list-item">
+                        <select class="form-input">
+                        	<option></option>
+                            <option>Financiamento com imobiliária</option>
+                            <option>Aluguel com imobiliária</option>
+                            <option>Aluguel pessoa física</option>
+                        </select>
+                        <label class="form-label">Negócio:</label>
+                    </li>
                 </ul>    
                     <!-- Lista -->
                     <ul>
@@ -157,7 +162,7 @@
                             <label class="form-check"><input type="checkbox" /><span class="span-check">1</span></label>
                             <label class="form-check"><input type="checkbox" /><span class="span-check">2</span></label>
                             <label class="form-check"><input type="checkbox" /><span class="span-check">3</span></label>
-                            <label class="form-check"><input type="checkbox" /><span class="span-check">4</span></label>
+                            <label class="form-check"><input type="checkbox" /><span class="span-check">5</span></label>
                         </li>
                     </ul>
                     <!-- Fim Lista -->
@@ -179,7 +184,7 @@
                     </li>
                 </ul>
         </div>
-        	<input type="button" class="formt-bt-confirm" value="CADASTRAR" />
+        	<input type="button" class="formt-bt-confirm" value="GRAVAR" />
         </form>
     </main>
     <!-- Fim Main -->   
